feat: dynamodb role field added

--- a/email_templates/recovery.html
+++ b/email_templates/recovery.html
@@ -101,12 +101,12 @@
         </div>
 
         <div class="content-section">
-            <h1 class="title">Password Reset</h1>
+            <h1 class="title">Set Your New Password</h1>
             <p class="description">
-                If you've lost your password or wish to reset it,<br />
-                use the link below to get started
+                If you've lost your password or want to create a new one,<br />
+                use the link below to get started.
             </p>
-            <a href="[recoveryURL]" class="button">Reset your password</a>
+            <a href="[setupPassURL]" class="button">Set your new password</a>
             <p class="footer-text">
                 If you didn't make the request, just ignore this message.<br />
                 Otherwise, you can reset your password
