feat; utils for cookies, CreateSessionAndUpdateLastLogin usecase

--- a/email_templates/recovery.html
+++ b/email_templates/recovery.html
@@ -104,7 +104,8 @@
             <h1 class="title">Set Your New Password</h1>
             <p class="description">
                 If you've lost your password or want to create a new one,<br />
-                use the link below to get started.
+                use the link below to get started. This link is only valid for 5 minutes.<br />
+
             </p>
             <a href="[setupPassURL]" class="button">Set your new password</a>
             <p class="footer-text">
