feat: contact endpoint

--- a/email_templates/contact_notify.html
+++ b/email_templates/contact_notify.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Password Reset</title>
+    <title>New Contact Form Data</title>
     <style>
         body {
             margin: 0;
@@ -48,37 +48,6 @@
             padding: 0 40px;
         }
 
-        .description {
-            color: #4b5563;
-            font-size: 14px;
-            font-weight: 500;
-            text-align: center;
-            line-height: 1.5;
-            margin: 0;
-            padding: 0 40px;
-        }
-
-        .button {
-            background-color: #7c3aed;
-            border: none;
-            border-radius: 4px;
-            color: #fff !important;
-            display: block;
-            font-size: 15px;
-            font-weight: 500;
-            margin: 20px auto;
-            padding: 12px 7px;
-            text-align: center;
-            text-decoration: none;
-            width: 210px;
-        }
-
-        .button:visited,
-        .button:active,
-        .button:hover {
-            color: #fff !important;
-        }
-
         .footer-text {
             color: #1f2937;
             font-size: 14px;
@@ -101,16 +70,13 @@
         </div>
 
         <div class="content-section">
-            <h1 class="title">Set Your New Password</h1>
-            <p class="description">
-                If you've lost your password or want to create a new one,<br />
-                use the link below to get started. This link is only valid for 5 minutes.<br />
+            <h1 class="title">New Contact Form Data</h1>
 
-            </p>
-            <a href="[setupPassURL]" class="button">Set your new password</a>
             <p class="footer-text">
-                If you didn't make the request, just ignore this message.<br />
-                Otherwise, you can reset your password
+                <strong>First Name:</strong> [first_name]<br />
+                    <strong>Last Name:</strong> [last_name]<br />
+                        <strong>Email:</strong> [email]<br />
+                            <strong>Message:</strong> [message]
             </p>
         </div>
     </div>
