feat: logo src changed in email templates

--- a/email_templates/contact_notify.html
+++ b/email_templates/contact_notify.html
@@ -63,8 +63,8 @@
     <div class="email-wrapper">
         <div class="logo-section">
             <img
-                    src="https://i.hizliresim.com/rlhc4zn.png"
-                    alt="DashTail Logo"
+                    src="https://smartsrt.com/images/logo/black.png"
+                    alt="SmartSRT Logo"
                     class="logo"
             />
         </div>
